--- a/railway.toml
+++ b/railway.toml
@@ -1,24 +1,21 @@
-# Railway configuration for project management SaaS
-
 [build]
 builder = "NIXPACKS"
+buildCommand = "npm install && npm run build"
 
 [deploy]
+startCommand = "npm start"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
-# Web Frontend Service
-[[services]]
-name = "web"
-source = "."
-buildCommand = "npm install && npm run build:web"
-startCommand = "npm run start:web"
-variables = { NODE_ENV = "production", NIXPACKS_BUILD_CMD = "npm install && npm run build:web" }
+[env]
+NODE_ENV = "production"
 
-# API Backend Service  
-[[services]]
-name = "api"
-source = "."
-buildCommand = "npm install && npm run build:api && npm run db:generate"
-startCommand = "npm run start:api"
-variables = { NODE_ENV = "production", NIXPACKS_BUILD_CMD = "npm install && npm run build:api && npm run db:generate" }
+[services.web]
+source = "apps/web"
+build.buildCommand = "npm install && npm run build"
+deploy.startCommand = "npm start"
+
+[services.api]
+source = "apps/api"
+build.buildCommand = "npm install && npm run build"
+deploy.startCommand = "npm start"
