fix: resolve TypeScript build configuration issues
- Remove incremental option from root tsconfig.json
- Add package-specific tsconfig.json files for shared, database, and ui packages
- Update tsup build scripts to use local tsconfig files
- This resolves the 'incremental' option error during Railway deployment

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,8 +5,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
+    "build": "tsup src/index.ts --format cjs,esm --dts --tsconfig tsconfig.json",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --watch --tsconfig tsconfig.json",
     "lint": "eslint src --ext .ts",
     "type-check": "tsc --noEmit"
   },
