--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^20.10.0",
     "eslint": "^8.55.0",
     "prettier": "^3.1.0",
+    "prisma": "^6.16.1",
     "turbo": "^1.11.0",
     "typescript": "^5.3.0"
   },
@@ -36,5 +37,8 @@
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-  "packageManager": "npm@8.19.2"
+  "packageManager": "npm@8.19.2",
+  "dependencies": {
+    "@prisma/client": "^6.16.1"
+  }
 }
